<resources>
    <string name="app_name">Tutor Geométrico</string>
    <string name="bar_name_main_admin">Tutor Geométrico</string>
    <string name="txt_btn_open_scannner">Abrir Scanner</string>
    <string name="search_tip">Nome, definição, outras informações...</string>

    <string name="ic_name_search">Pesquisar</string>
    <string name="ic_name_delete">Deletar</string>
    <string name="ic_name_edit">Editar</string>
    <string name="admin_list_empty_msg">Ainda não tem nenhuma figura salva, que tal adicionar?</string>
    <string name="admin_new_figure_rv_header_fig">Figura</string>
    <string name="admin_new_figure_rv_header_name">Nome</string>
    <string name="admin_new_figure_btn_selectfile_tip">SELECIONAR</string>
    <string name="admin_new_figure_tvw_file_loaded_hint">file_exemplo.xls</string>
    <string name="invalid_query_uri">A URI de busca não consta no banco de dados</string>
    <string name="invalid_insert_uri">A URI de inserção está em formato incorreto</string>
    <string name="invalid_update_uri">A URI de atualização está em formato incorreto</string>
    <string name="invalid_delete_uri">A URI de exclusão está em formato incorreto</string>
    <string name="admin_new_figure_tb_item_single">FORMULÁRIO</string>
    <string name="admin_new_figure_tb_item_multi">ARQUIVO</string>
    <string name="admin_new_figure_title_chooser">Selecione um arquivo .xls</string>
    <string name="TAG_TUTOR">TUTOR_GEOMETRICO</string>

    <string name="dialog_title_error">Erro</string>
    <string name="dialog_title_warning">Aviso</string>
    <string name="dialog_msg_file_type_error">Formato de arquivo incorreto</string>
    <string name="button_neutral_name">Ok</string>
    <string name="loaded_count_figures">Carregado %1$d registro (s)</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta tempus erat, non lacinia neque faucibus in. Praesent vel semper magna. Donec quis malesuada leo.</string>
    <string name="example_title">Title example</string>
    <string name="select">Selecionar</string>
    <string name="admin_new_figure_hint_code">Identificador</string>
    <string name="admin_new_figure_hint_name">Nome</string>
    <string name="aadmin_new_figure_hint_description">Descrição</string>
    <string name="aadmin_new_figure_hint_others">Outras Informações</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="admin_new_figure_btn_select_other_file">Selecionar outro arquivo</string>
    <string name="admin_new_figure_btn_select_file">Toque para selecionar um arquivo</string>
    <string name="admin_new_figure_btn_reset_rv">LIMPAR</string>
    <string name="runtime_error">Ocorreram erros ao tentar carregar o arquivo, verifique as restrições de arquivo ou contate o administrador</string>
    <string name="cleared_data">Todos os registros carregados foram apagados</string>
    <string name="select_a_picture">Escolha uma imagem</string>
    <string name="not_implemented">Recurso ainda não foi implementado</string>
    <string name="figure_added">Figura salva</string>
    <string name="figure_not_added">Falha ao tentar salvar a figura</string>
    <string name="updated_figure">Os dados foram atualizados</string>
    <string name="not_updated_figure">Ocorreu algum problema ao tentar atualizar</string>
    <string name="mode_admin">ADMINISTRADOR</string>
    <string name="mode_user">USUÁRIO COMUM</string>
    <string name="phrase_window_mode">ESCOLHA UM MODO PARA INGRESSAR NO APP</string>
    <string name="initial_speaker_phrase">Olá, seja bem vindo ao Tutor Geométrico, quando desejar minha ajuda pressione a parte inferior da tela, ou a parte superior para parar a reprodução atual</string>
    <string name="user_btn_get_help">OBTER AJUDA</string>
    <string name="loaded_resources">Recursos carregados com sucesso</string>
    <string name="fail_to_init_speech">Falha ao tentar iniciar os recursos de fala</string>
    <string name="speech_get_figure_code">Por favor, me fale o código da figura</string>
    <string name="speech_get_figure_code_again">Desculpe, não encontrei nenhuma figura com o código %1$s, por favor, me diga o código novamente</string>
    <string name="user_btn_yes">SIM</string>
    <string name="user_btn_no">NÃO</string>
    <string name="user_btn_cancel">PARAR REPRODUÇÃO</string>
    <string name="speech_others_info">Para ouvir mais algumas informações sobre esta figura toque na parte inferior da tela, caso contrário toque na parte superior</string>
    <string name="confirm_deletion">Confirma exclusão?</string>
    <string name="figures_added">Todas os registros foram salvos</string>
    <string name="some_figures_added">Apenas %1$d registros foram salvos</string>

</resources>
