<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    android:padding="@dimen/padding_panel"
    >

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phrase_window_mode"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="@dimen/margin_20dp"
        style="@style/Title"
        />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/mode_admin"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/mode_admin"
            style="@style/ButtonSecondary"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/mode_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/mode_user"
            android:layout_marginLeft="@dimen/margin_10dp"
            style="@style/ButtonSecondary"
            />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>