<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_content">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/admin_new_figure_fab_choose_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="0.1"
        android:src="@drawable/ic_geometric_figures_plus"
        android:backgroundTint="@android:color/white"

        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/admin_new_figure_form_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_new_figure_hint_code"
        android:layout_weight="0.05"
        android:layout_marginTop="40dp"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/admin_new_figure_form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_new_figure_hint_name"
        android:layout_weight="0.05"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/admin_new_figure_form_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:hint="@string/aadmin_new_figure_hint_description"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/admin_new_figure_form_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:hint="@string/aadmin_new_figure_hint_others"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/admin_edit_figure_fab_save"
        android:layout_gravity="end"
        android:visibility="gone"
        android:src="@drawable/ic_save_24dp"
        style="@style/FloatingActionButton"

        />
</LinearLayout>