<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/admin_new_figure_btn_select_file"
        style="@style/CommonText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:ellipsize="middle"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/admin_new_figure_btn_select_file"
        android:textColor="@android:color/darker_gray"
        android:backgroundTint="@android:color/white"
        android:elevation="0dp"
       />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/admin_new_figure_panel_loaded_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/admin_new_figure_btn_select_other_file"
            style="@style/ButtonSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:ellipsize="middle"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/admin_new_figure_btn_select_other_file"
            android:drawableStart="@drawable/ic_search_white_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/admin_new_figure_btn_reset_rv"
            style="@style/ButtonSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:ellipsize="middle"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/admin_new_figure_btn_reset_rv"
            android:drawableStart="@drawable/ic_autorenew_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/admin_new_figure_btn_select_other_file"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/admin_new_figures_rv_figures_loaded"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top_rv"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/admin_new_figure_btn_select_other_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>