<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_panel"
    tools:context=".activities.UserActivity"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/user_panel_loading_speech_resources"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        >

        <ProgressBar
            android:id="@+id/user_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carregando recursos de fala, por favor aguarde..."
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="5dp"
            style="@style/CommonText"
            />

    </android.support.v7.widget.LinearLayoutCompat>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/user_panel_speech_commands"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/user_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/user_btn_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/ButtonSecondary"
            />

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/user_btn_cancel"

            />


        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toTopOf="@id/user_btn_speak"

            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/user_btn_speak"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/user_btn_get_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/ButtonSecondary"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/user_panel_yes_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/user_btn_no"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/user_btn_no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/ButtonSecondary"
            />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/user_btn_no"

            />


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toTopOf="@id/user_btn_yes"

            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/user_btn_yes"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/user_btn_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/ButtonSecondary"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>